# nginx-logs-analyzer

./: README.md  output.txt  pyproject.toml
examples/: docker-compose.yaml
src/: cli.py  logger.py  main.py
src/nginx_logs_analyzer/: base.py  df.py  main.py  models.py  report.py  reports.py
src/nginx_logs_parser/: file.py  main.py  models.py
src/operations/: base.py
src/parser/: container.py  file.py  settings.py
