[tool.poetry]
name = "nginx-log-analyzer"
version = "0.1.0"
description = ""
authors = ["Panagiotis Kapsalis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.14.3"
mypy = "^1.18.2"
docker = "^7.1.0"
pydantic = "^2.12.3"
click = "^8.3.0"
python-json-logger = "^4.0.0"
polars = "^1.35.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
